<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="androidx.lifecycle.LiveData" />

        <import type="com.example.demomvvmgraphql.base.Resource.Loading" />

        <import type="com.example.demomvvmgraphql.PokemonDetailRepositoryQuery.Pokemon" />

        <import type="com.example.demomvvmgraphql.base.Resource.Failure" />

        <import type="com.example.demomvvmgraphql.base.Resource.Success" />

        <import type="com.example.demomvvmgraphql.base.Resource" />

        <variable
            name="data"
            type="LiveData&lt;Resource&lt;Pokemon&gt;&gt;" />

        <variable
            name="pokemon"
            type="Pokemon" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pokemonDetailView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <androidx.appcompat.widget.AppCompatTextView
                app:text="@{pokemon.name()}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/manropemedium"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry" />

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16sp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2">

                        <ImageView
                            app:imageUrl="@{pokemon.image()}"
                            android:layout_width="0dp"
                            android:layout_height="180dp"
                            android:layout_weight="1" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center">

                                <ImageView
                                    android:layout_width="24sp"
                                    android:layout_height="24sp"
                                    android:src="@drawable/weight" />

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/weightLabel"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="@string/weight"
                                    android:textColor="@color/colorAccent"
                                    android:textSize="16sp"
                                    app:fontFamily="@font/manropemedium" />

                            </LinearLayout>

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:textColor="@color/black"
                                app:fontFamily="@font/manropemedium"
                                app:weight="@{pokemon.weight()}" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="16sp"
                                android:gravity="center">

                                <ImageView
                                    android:layout_width="24sp"
                                    android:layout_height="24sp"
                                    android:src="@drawable/height" />

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/heightLabel"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="@string/height"
                                    android:textColor="@color/colorAccent"
                                    android:textSize="16sp"
                                    app:fontFamily="@font/manropemedium" />

                            </LinearLayout>

                            <androidx.appcompat.widget.AppCompatTextView
                                app:height="@{pokemon.height()}"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:textColor="@color/black"
                                app:fontFamily="@font/manropemedium" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/resistanceLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/resistance"
                            android:textColor="@color/colorAccent"
                            app:fontFamily="@font/manropemedium" />


                        <androidx.appcompat.widget.AppCompatTextView
                            app:resistance="@{pokemon.resistant()}"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4sp"
                            android:layout_marginLeft="4sp"
                            android:textColor="@color/black"
                            app:fontFamily="@font/manropemedium" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8sp"
                        android:visibility="gone">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/specialAttacks"
                            android:textColor="@color/colorAccent"
                            app:fontFamily="@font/manropemedium" />


                        <androidx.appcompat.widget.AppCompatTextView
                            app:special="@{pokemon.attacks().special()}"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4sp"
                            android:layout_marginLeft="4sp"
                            android:textColor="@color/black"
                            app:fontFamily="@font/manropemedium" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8sp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/weaknesses"
                            android:textColor="@color/colorAccent"
                            app:fontFamily="@font/manropemedium" />


                        <androidx.appcompat.widget.AppCompatTextView
                            app:weaknesses="@{pokemon.weaknesses()}"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4sp"
                            android:layout_marginLeft="4sp"
                            android:textColor="@color/black"
                            app:fontFamily="@font/manropemedium" />

                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        app:view="@{pokemon.evolutions()}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16sp"
                        android:text="@string/evolutions"
                        android:textColor="@color/colorAccent"
                        app:fontFamily="@font/manropemedium" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/evolutionRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>
        </ScrollView>

        <LinearLayout
            android:id="@+id/loadingLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:visibleGone="@{data instanceof Resource.Loading}">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/loadingAnim"
                android:layout_width="@dimen/loading_anim_size"
                android:layout_height="@dimen/loading_anim_size"
                android:layout_gravity="center"
                android:background="@null"
                app:lottie_autoPlay="true"
                app:lottie_fileName="anims/loading.json"
                app:lottie_loop="true" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/loadingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/manropemedium"
                android:text="@string/loadingDetail"
                android:textSize="16sp"
                app:layout_constraintRight_toRightOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/errorLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginLeft="16sp"
            android:layout_marginEnd="16sp"
            android:layout_marginRight="16sp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:visibleGone="@{data instanceof Resource.Failure}">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation_view2"
                android:layout_width="@dimen/loading_anim_size"
                android:layout_height="@dimen/loading_anim_size"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_fileName="anims/error.json"
                app:lottie_loop="true" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/errorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/error"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:fontFamily="@font/manropemedium"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/animation_view2" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

