<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="androidx.lifecycle.LiveData" />

        <import type="com.example.demomvvmgraphql.base.Resource.Loading" />

        <import type="com.example.demomvvmgraphql.PokemonRepositoryQuery.Pokemon" />

        <import type="com.example.demomvvmgraphql.base.Resource.Failure" />

        <import type="com.example.demomvvmgraphql.base.Resource" />

        <import type="java.util.List" />

        <variable
            name="data"
            type="LiveData&lt;Resource&lt;List&lt;Pokemon&gt;&gt;&gt;" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainActivityRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/toolbarText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/manropemedium"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <LinearLayout
            android:id="@+id/loadingLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:visibleGone="@{data instanceof Resource.Loading}">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/loadingAnim"
                android:layout_width="@dimen/loading_anim_size"
                android:layout_height="@dimen/loading_anim_size"
                android:layout_gravity="center"
                android:background="@null"
                app:lottie_autoPlay="true"
                app:lottie_fileName="anims/loading.json"
                app:lottie_loop="true" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/loadingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/manropemedium"
                android:text="@string/loading"
                android:textSize="16sp"
                app:layout_constraintRight_toRightOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/errorLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginLeft="16sp"
            android:layout_marginEnd="16sp"
            android:layout_marginRight="16sp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:visibleGone="@{data instanceof Resource.Failure}">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation_view2"
                android:layout_width="@dimen/loading_anim_size"
                android:layout_height="@dimen/loading_anim_size"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_fileName="anims/error.json"
                app:lottie_loop="true" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/errorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/error"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:fontFamily="@font/manropemedium"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/animation_view2" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>